--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@ h3 {
         <h1>Sarah Gothard</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studying Bible with a minor in 
+            worldview and apologetics. I work for the Davis Field House.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. My favorite website is  
-            <a href="https://mobilehymns.org/">here</a>, and you can email me  
-            <a href="mailto:sgothard@bju.edu">here</a>.
+            I attend Morningside Baptist Church. My favorite website is  
+            <a href=https://www.reformedsage.com/">here</a>, and you can email me  
+            <a href="mailto:lscot479@students.bju.edu">here</a>.
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy reading and playing basketball.
          </p>
         <h3>EDUCATION</h3>
         Computer Science<br />
