--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h3 {
             I enjoy reading and playing basketball.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Biblical Studies<br />
         Bob Jones University<br />
         Example image:
         <img src="https://cs.bju.edu/media/bju-math-division/bju-computer-science/site-assets/images/cs-logo-main.png" />
