--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ h3 {
 </head>    
 <body>
     <div id="content">
-        <h1>Sarah Gothard</h1>
+        <h1>Levi Scott</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
          <p>I am a freshman at Bob Jones University studying Bible with a minor in 
