--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <section id="services" class="content-section bg-primary text-white text-center">
         <div class="container">
             <div class="content-section-heading">
-                <h3 class="text-secondary mb-0">What is my favorite color?</h3>
+                <h3 class="text-secondary mb-0">A little about me:</h3>
                 <h2 class="mb-5"></h2>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                    <h4><strong>Orange!</strong></h4>
+                    <h4><strong></strong></h4>
                 </div>
                 <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
                     <h4></h4>
